Fix expense list table alignment fixed

--- a/web/css/_variables.scss
+++ b/web/css/_variables.scss
@@ -7,7 +7,7 @@ $brand-danger: #e74c3c;
 $brand-null: rgba(158, 158, 158, .2);
 
 //Dulith- Search Filters bar background color
-$ikro-pale-white: #fdfdfd;
+$ikro-pale-white: #fcfcfc;
 //============== FLAT BUTTON STYLES =========================
 /* #Belize Hole Sea Flat Button
 ==================================================*/
