--- a/web/css/app.customer.list.css
+++ b/web/css/app.customer.list.css
@@ -73,7 +73,7 @@
   border: 1px solid rgba(0, 0, 0, 0.12);
   padding: 20px;
   margin-bottom: 15px;
-  background-color: #fdfdfd; }
+  background-color: #fcfcfc; }
   .customer-search th {
     font-weight: 400;
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
