--- a/web/css/app.expense.list.scss
+++ b/web/css/app.expense.list.scss
@@ -4,9 +4,21 @@
   border: 1px solid rgba(0,0,0,.12);
   padding: 20px;
   margin-bottom: 15px;
+  background-color: $ikro-pale-white;
   th {
-    font-weight: 500;
+    font-weight: 400;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    padding-right: 1%;
   }
+}
+
+.expense-data-table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+.search-input-table {
+  width: 100%;
 }
 
 .search-input{
@@ -15,5 +27,26 @@
   padding-top: 8px;
   padding-bottom: 8px;
   margin-top: 3px;
-  margin-right: 5px;
+}
+
+.table-data-truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#expense-type {
+  width: 20%;
+}
+#expense-time {
+  width: 20%;
+}
+#expense-description {
+  width: 30%;
+}
+#expense-amount {
+  width: 20%;
+}
+#expense-edit-btn {
+  width: 10%;
 }
